--- a/packages/SystemUI/res/values/candy_strings.xml
+++ b/packages/SystemUI/res/values/candy_strings.xml
@@ -38,6 +38,8 @@
     <string name="navbar_tuner_activity">Navigation bar buttons</string>
     <string name="lockscreen_tuner_activity">Lock screen shortcuts</string>
     <string name="powernotif_tuner_activity">Power notifications</string>
+    <string name="lockscreen_default">Default</string>
+    <string name="lockscreen_hidden">None</string>
 
     <!-- Navbar Tuner -->
     <string name="preview">Preview</string>
