Lockscreen bottom shortcuts fixes
- fix systemui fc
- fix left custom shortcut always launching Dialer/Contacts
- fix right custom shortcut breaking double tap on power for camera gesture
- fix text hint for single tap on custom shortcuts
- always give default camera intent to bindCameraPrewarmService to ensure
prewarm for double tap power for camera gesture, KeyguardBottomAreaView.launchCamera
will unbind it even for non camera right shortcuts after startActivityAsUser
- fix power camera gesture showing a white splash screen on launch
when right shorcut is custom
- fix new O adaptive icons becoming black when launching a shortcut

Change-Id: I3985ed790ae57ce4e1d006126a6281184468dae4

--- a/packages/SystemUI/res/values/candy_strings.xml
+++ b/packages/SystemUI/res/values/candy_strings.xml
@@ -40,6 +40,7 @@
     <string name="powernotif_tuner_activity">Power notifications</string>
     <string name="lockscreen_default">Default</string>
     <string name="lockscreen_hidden">None</string>
+    <string name="custom_hint">Swipe from icon to launch</string>
 
     <!-- Navbar Tuner -->
     <string name="preview">Preview</string>
