--- a/core/res/res/values/candy_config.xml
+++ b/core/res/res/values/candy_config.xml
@@ -90,13 +90,13 @@
     <!-- In call notification vibration strength -->
     <integer name="config_in_call_notification_vibration_strength">30</integer>
 
-    <!-- Paths to the libraries that contain device specific key handlers
+    <!-- Paths to the libraries that contain device specific key handlers -->
     <string-array name="config_deviceKeyHandlerLibs" translatable="false">
-    </string-array> -->
+    </string-array>
 
-    <!-- Names of the key handler classes
+    <!-- Names of the key handler classes -->
     <string-array name="config_deviceKeyHandlerClasses" translatable="false">
-    </string-array> -->
+    </string-array>
 
     <!-- Power menu -->
     <string-array translatable="false" name="config_custom_globalActionsList">
