--- a/core/res/res/values/candy_symbols.xml
+++ b/core/res/res/values/candy_symbols.xml
@@ -66,8 +66,9 @@
     <java-symbol type="dimen" name="nav_gesture_swipe_min_length" />
     <java-symbol type="dimen" name="nav_gesture_long_press_max_length" />
 
-    <java-symbol type="string" name="config_deviceKeyHandlerLib" />
-    <java-symbol type="string" name="config_deviceKeyHandlerClass" />
+    <!-- Device keyhandlers -->
+    <java-symbol type="array" name="config_deviceKeyHandlerLibs" />
+    <java-symbol type="array" name="config_deviceKeyHandlerClasses" />
 
     <!-- HW keys binding -->
     <java-symbol type="anim" name="custom_app_in" />
