--- a/packages/SystemUI/res/values/config.xml
+++ b/packages/SystemUI/res/values/config.xml
@@ -124,7 +124,7 @@
 
     <!-- Tiles native to System UI. ORDER SHOULD MATCH "quick_settings_tiles_default" ABOVE! -->
     <string name="quick_settings_tiles_stock" translatable="false">
-        wifi,bt,dnd,flashlight,rotation,battery,cell,airplane,cast,nfc,location,hotspot,inversion,saver,work,night,theme,reboot,screenshot,screenrecord,sound,expanded_desktop,cpuinfo,music
+        wifi,bt,dnd,flashlight,rotation,battery,cell,airplane,cast,nfc,location,gaming,hotspot,inversion,saver,work,night,theme,reboot,screenshot,screenrecord,sound,expanded_desktop,cpuinfo,music
     </string>
 
     <!-- The tiles to display in QuickSettings -->
