Q Clock - De-hardcode two more strings
Change-Id: Ida9a119364ad1a0eb6e5227491285188c32fb2c8

--- a/packages/SystemUI/res/values/candy_strings.xml
+++ b/packages/SystemUI/res/values/candy_strings.xml
@@ -186,4 +186,8 @@
 
     <!-- Ambient Display Pixel-Like string -->
     <string name="ambientmusic_songinfo">%s by %s</string>
+
+    <!-- CustomText clock -->
+    <string name="high_noon_first_row">High</string>
+    <string name="high_noon_second_row">Noon</string>
 </resources>
