--- a/packages/SystemUI/res/layout/volume_dialog.xml
+++ b/packages/SystemUI/res/layout/volume_dialog.xml
@@ -82,8 +82,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/rounded_bg_bottom_background">
-                <com.android.systemui.statusbar.phone.ExpandableIndicator
+                <com.android.keyguard.AlphaOptimizedImageButton
                     android:id="@+id/expandable_indicator"
+                    android:src="@drawable/ic_volume_panel_expand"
+                    android:layout_gravity="center"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     android:clipToPadding="false"
@@ -91,7 +93,8 @@
                     android:focusable="true"
                     android:layout_marginRight="8dp"
                     android:layout_marginLeft="8dp"
-                    android:background="?android:attr/selectableItemBackgroundBorderless"
+                    android:background="@drawable/ripple_drawable_20dp"
+                    android:tint="@color/accent_tint_color_selector"
                     android:contentDescription="@string/accessibility_quick_settings_expand"
                     android:padding="14dp" />
             </FrameLayout>
